# Synthetic-Data-Generator-C-

./: .gitignore  CMakeLists.txt  README.md  Synthetic Data Generator.aps  Synthetic Data Generator.sln  Synthetic Data Generator.vcxproj  Synthetic Data Generator.vcxproj.filters  project.txt
Syntheti.d40d9406/x64/Debug/Syntheti.d40d9406.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Synthetic Data Generator.lastbuildstate  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
config/: config.h
include/: AudioData.h  Distributions.h  FileExport.h  ImageData.h  RandomGenerators.h  TabularData.h  TextData.h  TimeSeriesData.h  resource.h
output/: tabular_data.csv  text_data.txt  timeseries_data.csv
output/images/: image_1.ppm  image_2.ppm  image_3.ppm  image_4.ppm  image_5.ppm
src/: Synthetic Data Generator.cpp
src/data_types/: AudioData.cpp  ImageData.cpp  TabularData.cpp  TextData.cpp  TimeSeriesData.cpp
src/utils/: Distributions.cpp  FileExport.cpp  RandomGenerators.cpp
tests/: test_AudioData.cpp  test_ImageData.cpp  test_TabularData.cpp  test_TextData.cpp  test_TimeSeriesData.cpp
